--- a/index.html
+++ b/index.html
@@ -726,22 +726,22 @@
         <div class="col-md-12">
           <div class="owl-carousel owl-theme" style="display: flex;justify-content: center;">
             <div class="clients-logo">
-              <a href="#0"><img src="./images/khach-hang/Nestle-Logo-150x150-1.png.webp" alt="" /></a>
+              <a href="./index.html"><img src="./images/khach-hang/Nestle-Logo-150x150-1.png.webp" alt="" /></a>
             </div>
             <div class="clients-logo">
-              <a href="#0"><img src="./images/khach-hang/toa-150x150-1.jpg.webp" alt="" /></a>
+              <a href="./index.html"><img src="./images/khach-hang/toa-150x150-1.jpg.webp" alt="" /></a>
             </div>
             <div class="clients-logo">
-              <a href="#0"><img src="./images/khach-hang/toyota-150x150-1.png.webp" alt="" /></a>
+              <a href="./index.html"><img src="./images/khach-hang/toyota-150x150-1.png.webp" alt="" /></a>
             </div>
             <div class="clients-logo">
-              <a href="#0"><img src="./images/khach-hang/Untitled-2-1-150x150-1.png.webp" alt="" /></a>
+              <a href="./index.html"><img src="./images/khach-hang/Untitled-2-1-150x150-1.png.webp" alt="" /></a>
             </div>
             <div class="clients-logo">
-              <a href="#0"><img src="./images/khach-hang/vnvc-150x150-1.webp" alt="" /></a>
+              <a href="./index.html"><img src="./images/khach-hang/vnvc-150x150-1.webp" alt="" /></a>
             </div>
             <div class="clients-logo">
-              <a href="#0"><img src="./images/khach-hang/WIPRO-150x150-1.png.webp" alt="" /></a>
+              <a href="./index.html"><img src="./images/khach-hang/WIPRO-150x150-1.png.webp" alt="" /></a>
             </div>
           </div>
         </div>
@@ -755,9 +755,11 @@
         <div class="row">
           <div class="col-md-4">
             <div class="footer-column footer-about">
-              <h3 class="footer-title" style="font-weight: 800;line-height: 40px;">CÔNG TY CỔ PHẦN DỊCH VỤ BẢO VỆ CHUYÊN NGHIỆP TRUNG NAM</h3>
+              <h3 class="footer-title" style="font-weight: 800;line-height: 40px;">CÔNG TY CỔ PHẦN DỊCH VỤ BẢO VỆ CHUYÊN
+                NGHIỆP TRUNG NAM</h3>
               <p class="footer-about-text">
-                Chào mừng khách hàng đến với bảo vệ Trung Nam - Trung Nam cung cấp cho khách hàng dịch vụ bảo vệ tốt nhất hiện
+                Chào mừng khách hàng đến với bảo vệ Trung Nam - Trung Nam cung cấp cho khách hàng dịch vụ bảo vệ tốt
+                nhất hiện
                 nay. Với phương châm hoạt động
               </p>
               <p style="font-size: 18px; color: white;">“An Toàn – Uy Tín – Chất Lượng – Hiệu Quả”.</p>
@@ -789,7 +791,8 @@
                 <p class="footer-contact-phone">
                   <span class="flaticon-call"></span> <a href="tel:+84934193113">0934 193 113</a>
                 </p>
-                <p class="footer-contact-mail">Email: <a href="mailto:baovetrungnam.vn@gmail.com">baovetrungnam.vn@gmail.com</a></p>
+                <p class="footer-contact-mail">Email: <a
+                    href="mailto:baovetrungnam.vn@gmail.com">baovetrungnam.vn@gmail.com</a></p>
                 <p class="footer-contact-mail">Website: <a href="./index.html">www.baovetrungnam.vn</a></p>
               </div>
 
