update img trang chu

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-  <title>Bảo Vệ Trung Nam</title>
+  <title>CÔNG TY CỔ PHẦN DỊCH VỤ BẢO VỆ CHUYÊN NGHIỆP TRUNG NAM</title>
   <link rel="shortcut icon" href="images/logo-icon.png" />
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed&family=Gilda+Display&display=swap" />
@@ -130,7 +130,7 @@
   <header class="header slider-fade">
     <div class="owl-carousel owl-theme">
       <!-- The opacity on the image is made with "data-overlay-dark="number". You can change it using the numbers 0-9. -->
-      <div class="text-center item bg-img" data-overlay-dark="2" data-background="images/banner/banner.jpg">
+      <div class="text-center item bg-img" data-overlay-dark="2" data-background="images/trang-chu/1920x1200-pixel.jpg">
         <div class="v-middle caption">
           <div class="container">
             <div class="row">
@@ -152,7 +152,7 @@
           </div>
         </div>
       </div>
-      <div class="text-center item bg-img" data-overlay-dark="2" data-background="img/slider/3.jpg">
+      <div class="text-center item bg-img" data-overlay-dark="2" data-background="images/banner/banner.jpg">
         <div class="v-middle caption">
           <div class="container">
             <div class="row">
@@ -174,7 +174,7 @@
           </div>
         </div>
       </div>
-      <div class="text-center item bg-img" data-overlay-dark="3" data-background="img/slider/1.jpg">
+      <div class="text-center item bg-img" data-overlay-dark="3" data-background="images/trang-chu/1920x1200-01pixel.jpg">
         <div class="v-middle caption">
           <div class="container">
             <div class="row">
@@ -263,7 +263,7 @@
         <div class="col-md-4">
           <div class="item">
             <div class="position-re o-hidden">
-              <img src="img/rooms/1.jpg" alt="" />
+              <img src="./images/trang-chu/900 x 1200-pixel-03.jpg" alt="" />
             </div>
             <span class="category"><a href="lien-he.html">Bảng giá thuê</a></span>
             <div class="con">
@@ -286,7 +286,7 @@
         <div class="col-md-4">
           <div class="item">
             <div class="position-re o-hidden">
-              <img src="img/rooms/2.jpg" alt="" />
+              <img src="./images/trang-chu/900 x 1200-pixel-01.jpg" alt="" />
             </div>
             <span class="category"><a href="lien-he.html">Bảng giá thuê</a></span>
             <div class="con">
@@ -308,7 +308,7 @@
         <div class="col-md-4">
           <div class="item">
             <div class="position-re o-hidden">
-              <img src="img/rooms/3.jpg" alt="" />
+              <img src="./images/trang-chu/900 x 1200-pixel-02.jpg" alt="" />
             </div>
             <span class="category"><a href="lien-he.html">Bảng giá thuê</a></span>
             <div class="con">
@@ -331,7 +331,7 @@
         <div class="col-md-6">
           <div class="item">
             <div class="position-re o-hidden">
-              <img src="img/rooms/4.jpg" alt="" />
+              <img src="./images/trang-chu/900 x 1200-pixel-05.jpg" alt="" />
             </div>
             <span class="category"><a href="lien-he.html">Bảng giá thuê</a></span>
             <div class="con">
@@ -353,7 +353,7 @@
         <div class="col-md-6">
           <div class="item">
             <div class="position-re o-hidden">
-              <img src="img/rooms/7.jpg" alt="" />
+              <img src="./images/trang-chu/900 x 1200-pixel-04.jpg" alt="" />
             </div>
             <span class="category"><a href="lien-he.html">Bảng giá thuê</a></span>
             <div class="con">
@@ -396,7 +396,7 @@
         <div class="col-md-8">
           <div class="owl-carousel owl-theme">
             <div class="pricing-card">
-              <img src="img/pricing/1.jpg" alt="" />
+              <img src="images/trang-chu/700 x 400-pixel.jpg" alt="" />
               <div class="desc">
                 <div class="name" style="line-height: 26px;">NHÂN VIÊN CHUYÊN NGHIỆP</div>
                 <ul class="list-unstyled list">
@@ -409,7 +409,7 @@
               </div>
             </div>
             <div class="pricing-card">
-              <img src="img/pricing/2.jpg" alt="" />
+              <img src="images/trang-chu/700 x 400-pixel-02.jpg" alt="" />
               <div class="desc">
                 <div class="name">BẢO MẬT – TRÁCH NHIỆM </div>
                 <ul class="list-unstyled list">
@@ -420,7 +420,7 @@
               </div>
             </div>
             <div class="pricing-card">
-              <img src="img/pricing/3.jpg" alt="" />
+              <img src="images/trang-chu/700 x 400-pixel-03.jpg" alt="" />
               <div class="desc">
                 <div class="name">DỊCH VỤ ĐA DẠNG</div>
                 <ul class="list-unstyled list">
@@ -431,7 +431,7 @@
               </div>
             </div>
             <div class="pricing-card">
-              <img src="img/pricing/4.jpg" alt="" />
+              <img src="images/trang-chu/700 x 400-pixel-04.jpg" alt="" />
               <div class="desc">
                 <div class="name">PHÍ CẠNH TRANH</div>
                 <ul class="list-unstyled list">
@@ -755,6 +755,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="footer-column footer-about">
+              <div><img src="./images/logo-trungnam.png" style="width: 35%;"/></div>
               <h3 class="footer-title" style="font-weight: 800;line-height: 40px;">CÔNG TY CỔ PHẦN DỊCH VỤ BẢO VỆ CHUYÊN
                 NGHIỆP TRUNG NAM</h3>
               <p class="footer-about-text">
@@ -767,7 +768,7 @@
 
             </div>
           </div>
-          <div class="col-md-3 offset-md-1">
+          <div class="col-md-3 offset-md-1 p-footer" >
             <div class="footer-column footer-explore clearfix">
               <h3 class="footer-title">DỊCH VỤ</h3>
               <ul class="footer-explore-list list-unstyled">
@@ -777,10 +778,11 @@
                 <li><a href="bao-ve-shop-thoi-trang.html">Bảo vệ shop thời trang</a></li>
                 <li><a href="bao-ve-toa-nha-chung-cu.html">Bảo vệ trung cư</a></li>
                 <li><a href="bao-ve-ngan-hang.html">Bảo vệ ngân hàng</a></li>
+                <li><a href="bao-ve-quan-cafe.html">Bảo vệ quán cafe</a></li>
               </ul>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 p-footer" >
             <div class="footer-column footer-contact">
               <h3 class="footer-title">LIÊN HỆ</h3>
               <p class="footer-contact-text">
