--- a/index.html
+++ b/index.html
@@ -6,7 +6,38 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <title>CÔNG TY CỔ PHẦN DỊCH VỤ BẢO VỆ CHUYÊN NGHIỆP TRUNG NAM</title>
+
+
   <link rel="shortcut icon" href="images/logo-icon.png" />
+
+
+
+
+  <!-- HTML Meta Tags -->
+  <meta name="description"
+    content="CÔNG TY CỔ PHẦN DỊCH VỤ BẢO VỆ CHUYÊN NGHIỆP TRUNG NAM cung cấp cho khách hàng dịch vụ bảo vệ tốt nhất hiện nay. Với phương châm hoạt động “An Toàn – Uy Tín – Chất Lượng – Hiệu Quả”. ">
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://baovetrungnam.vn">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="CÔNG TY CỔ PHẦN DỊCH VỤ BẢO VỆ CHUYÊN NGHIỆP TRUNG NAM">
+  <meta property="og:description"
+    content="CÔNG TY CỔ PHẦN DỊCH VỤ BẢO VỆ CHUYÊN NGHIỆP TRUNG NAM cung cấp cho khách hàng dịch vụ bảo vệ tốt nhất hiện nay. Với phương châm hoạt động “An Toàn – Uy Tín – Chất Lượng – Hiệu Quả”. ">
+  <meta property="og:image" itemprop="image" content="https://baovetrungnam.vn/images/logo.png" />
+  <meta property="og:image:url" content="https://baovetrungnam.vn/images/logo.png">
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:type" content="image/jpg" />
+  <meta property="og:image:alt" content="Công ty CP DV BVCN Trung Nam" />
+  <meta name="twitter:image:alt" content="Công ty CP DV BVCN Trung Nam">
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="baovequangkhai.com">
+  <meta property="twitter:url" content="https://baovetrungnam.vn/">
+  <meta name="twitter:title" content="CÔNG TY CỔ PHẦN DỊCH VỤ BẢO VỆ CHUYÊN NGHIỆP TRUNG NAM">
+  <meta name="twitter:description"
+    content="CÔNG TY CỔ PHẦN DỊCH VỤ BẢO VỆ CHUYÊN NGHIỆP TRUNG NAM cung cấp cho khách hàng dịch vụ bảo vệ tốt nhất hiện nay. Với phương châm hoạt động “An Toàn – Uy Tín – Chất Lượng – Hiệu Quả”. ">
+  <meta name="twitter:image" content="https://baovetrungnam.vn/images/logo.png">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed&family=Gilda+Display&display=swap" />
   <link rel="stylesheet" href="css/plugins.css" />
@@ -174,7 +205,8 @@
           </div>
         </div>
       </div>
-      <div class="text-center item bg-img" data-overlay-dark="3" data-background="images/trang-chu/1920x1200-01pixel.jpg">
+      <div class="text-center item bg-img" data-overlay-dark="3"
+        data-background="images/trang-chu/1920x1200-01pixel.jpg">
         <div class="v-middle caption">
           <div class="container">
             <div class="row">
@@ -755,7 +787,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="footer-column footer-about">
-              <div><img src="./images/logo-trungnam.png" style="width: 35%;"/></div>
+              <div><img src="./images/logo-trungnam.png" style="width: 35%;" /></div>
               <h3 class="footer-title" style="font-weight: 800;line-height: 40px;">CÔNG TY CỔ PHẦN DỊCH VỤ BẢO VỆ CHUYÊN
                 NGHIỆP TRUNG NAM</h3>
               <p class="footer-about-text">
@@ -768,7 +800,7 @@
 
             </div>
           </div>
-          <div class="col-md-3 offset-md-1 p-footer" >
+          <div class="col-md-3 offset-md-1 p-footer">
             <div class="footer-column footer-explore clearfix">
               <h3 class="footer-title">DỊCH VỤ</h3>
               <ul class="footer-explore-list list-unstyled">
@@ -782,7 +814,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-md-4 p-footer" >
+          <div class="col-md-4 p-footer">
             <div class="footer-column footer-contact">
               <h3 class="footer-title">LIÊN HỆ</h3>
               <p class="footer-contact-text">
