--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:image:type" content="image/jpg" />
-  <meta property="og:image:alt" content="Công ty CP DV BVCN Trung Nam" />
-  <meta name="twitter:image:alt" content="Công ty CP DV BVCN Trung Nam">
+  <meta property="og:image:alt" content="CÔNG TY CỔ PHẦN DỊCH VỤ BẢO VỆ CHUYÊN NGHIỆP TRUNG NAM" />
+  <meta name="twitter:image:alt" content="CÔNG TY CỔ PHẦN DỊCH VỤ BẢO VỆ CHUYÊN NGHIỆP TRUNG NAM">
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta property="twitter:domain" content="baovequangkhai.com">
+  <meta property="twitter:domain" content="baovetrungnam.vn">
   <meta property="twitter:url" content="https://baovetrungnam.vn/">
   <meta name="twitter:title" content="CÔNG TY CỔ PHẦN DỊCH VỤ BẢO VỆ CHUYÊN NGHIỆP TRUNG NAM">
   <meta name="twitter:description"
