update gioi thieu

--- a/gioi-thieu.html
+++ b/gioi-thieu.html
@@ -201,7 +201,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="single-facility animate-box" data-animate-effect="fadeInUp">
-                        <span class="flaticon-world"></span>
+                        <span class=""><img src="./images/logo.png" /></span>
                         <h5>Nhân viên Bảo vệ Trung Nam được đào tạo bài bản, nhiệt tình thân thiện, có tinh thần
                             trách nhiệm cao trong công việc.</h5>
                         <div class="facility-shape"> <span class="flaticon-world"></span> </div>
@@ -209,7 +209,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="single-facility animate-box" data-animate-effect="fadeInUp">
-                        <span class="flaticon-car"></span>
+                        <span class=""><img src="./images/logo.png" /></span>
                         <h5>Cung cấp nhiều loại hình dịch vụ bảo vệ khác nhau đáp ứng mọi yêu cầu của khách hàng, cung
                             cấp dịch vụ bảo vệ theo yêu cầu</h5>
                         <div class="facility-shape"> <span class="flaticon-car"></span> </div>
@@ -217,7 +217,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="single-facility animate-box" data-animate-effect="fadeInUp">
-                        <span class="flaticon-bed"></span>
+                        <span class=""><img src="./images/logo.png" /></span>
                         <h5>Giá thuê bảo vệ chuyên nghiệp hợp lý từ phổ thông đến cao cấp, tiết kiệm chi phí và nhiều sự
                             lựa chọn cho Quý khách hàng</h5>
                         <div class="facility-shape"> <span class="flaticon-bed"></span> </div>
@@ -225,14 +225,14 @@
                 </div>
                 <div class="col-md-4">
                     <div class="single-facility animate-box" data-animate-effect="fadeInUp">
-                        <span class="flaticon-swimming"></span>
+                        <span class=""><img src="./images/logo.png" /></span>
                         <h5>Khắc phục ngay lập tức mọi sự cố, dù nhỏ nhất, để đảm bảo quyền lợi cho khách hàng, luôn ở trong trạng thái cảnh giác cao độ</h5>
                         <div class="facility-shape"> <span class="flaticon-swimming"></span> </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="single-facility animate-box" data-animate-effect="fadeInUp">
-                        <span class="flaticon-wifi"></span>
+                        <span class=""><img src="./images/logo.png" /></span>
                         <h5>Ngoài nghiệp vụ PCCC nhanh và hiệu quả cao, chúng tôi có Đội cơ động luôn kiểm tra và giám
                             sát hỗ trợ mục tiêu 24/24h.</h5>
                         <div class="facility-shape"> <span class="flaticon-wifi"></span> </div>
@@ -240,7 +240,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="single-facility animate-box" data-animate-effect="fadeInUp">
-                        <span class="flaticon-breakfast"></span>
+                        <span class=""><img src="./images/logo.png" /></span>
                         <h5>“An Toàn – Uy Tín – Chất Lượng – Hiệu Quả”, cùng với đội ngũ nhân viên được tuyển chọn và
                             đào tạo nghiệp vụ bài bản</h5>
                         <div class="facility-shape"> <span class="flaticon-breakfast"></span> </div>
