--- a/noi-quy-bao-ve-toa-nha.html
+++ b/noi-quy-bao-ve-toa-nha.html
@@ -5,8 +5,33 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <title>The Cappa Luxury Hotel</title>
-    <link rel="shortcut icon" href="img/favicon.png" />
+    <title>Nội quy bảo vệ tòa nhà</title>
+        <!-- HTML Meta Tags -->
+        <meta name="description"
+        content="CÔNG TY CỔ PHẦN DỊCH VỤ BẢO VỆ CHUYÊN NGHIỆP TRUNG NAM cung cấp cho khách hàng dịch vụ bảo vệ tốt nhất hiện nay. Với phương châm hoạt động “An Toàn – Uy Tín – Chất Lượng – Hiệu Quả”. ">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://baovetrungnam.vn">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="CÔNG TY CỔ PHẦN DỊCH VỤ BẢO VỆ CHUYÊN NGHIỆP TRUNG NAM">
+    <meta property="og:description"
+        content="CÔNG TY CỔ PHẦN DỊCH VỤ BẢO VỆ CHUYÊN NGHIỆP TRUNG NAM cung cấp cho khách hàng dịch vụ bảo vệ tốt nhất hiện nay. Với phương châm hoạt động “An Toàn – Uy Tín – Chất Lượng – Hiệu Quả”. ">
+    <meta property="og:image" itemprop="image" content="https://baovetrungnam.vn/images/logo.png" />
+    <meta property="og:image:url" content="https://baovetrungnam.vn/images/logo.png">
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:type" content="image/jpg" />
+    <meta property="og:image:alt" content="CÔNG TY CỔ PHẦN DỊCH VỤ BẢO VỆ CHUYÊN NGHIỆP TRUNG NAM" />
+    <meta name="twitter:image:alt" content="CÔNG TY CỔ PHẦN DỊCH VỤ BẢO VỆ CHUYÊN NGHIỆP TRUNG NAM">
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="baovetrungnam.vn">
+    <meta property="twitter:url" content="https://baovetrungnam.vn/">
+    <meta name="twitter:title" content="CÔNG TY CỔ PHẦN DỊCH VỤ BẢO VỆ CHUYÊN NGHIỆP TRUNG NAM">
+    <meta name="twitter:description"
+        content="CÔNG TY CỔ PHẦN DỊCH VỤ BẢO VỆ CHUYÊN NGHIỆP TRUNG NAM cung cấp cho khách hàng dịch vụ bảo vệ tốt nhất hiện nay. Với phương châm hoạt động “An Toàn – Uy Tín – Chất Lượng – Hiệu Quả”. ">
+    <meta name="twitter:image" content="https://baovetrungnam.vn/images/logo.png">
+    <link rel="shortcut icon" href="images/logo-icon.png" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed&family=Gilda+Display&display=swap">
     <link rel="stylesheet" href="css/plugins.css" />
@@ -30,77 +55,102 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-md">
         <div class="container">
-            <!-- Logo -->
-            <div class="logo-wrapper navbar-brand valign">
-                <a href="index.html">
-                    <div class="logo">
-                        <img src="images/logo.png" class="logo-img" alt="">
-                    </div>
-                </a>
-            </div>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
-                aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"> <span
-                    class="navbar-toggler-icon"><i class="ti-menu"></i></span> </button>
-            <!-- Navbar links -->
-            <div class="collapse navbar-collapse" id="navbar">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item dropdown"> <span class="nav-link"> Home <i class="ti-angle-down"></i></span>
-                        <ul class="dropdown-menu last">
-                            <li class="dropdown-item"><a href="index.html">Home Layout 1</a></li>
-                            <li class="dropdown-item"><a href="index2.html">Home Layout 2</a></li>
-                            <li class="dropdown-item"><a href="index3.html">Home Layout 3</a></li>
-                            <li class="dropdown-item"><a href="index4.html">Home Layout 4</a></li>
-                            <li class="dropdown-item"><a href="index5.html">Video 1</a></li>
-                            <li class="dropdown-item"><a href="index6.html">Video 2</a></li>
-                            <li class="dropdown-item"><a href="index7.html">Video 3</a></li>
-                            <li class="dropdown-item"><a href="index8.html">Slideshow 1</a></li>
-                            <li class="dropdown-item"><a href="index9.html">Slideshow 2</a></li>
-                            <li class="dropdown-item"><a href="index10.html">Slideshow 3</a></li>
-                            <li class="dropdown-item"><a href="index11.html">Parallax Image 1</a></li>
-                            <li class="dropdown-item"><a href="index12.html">Parallax Image 2</a></li>
-                            <li class="dropdown-item"><a href="index13.html">Parallax Image 3</a></li>
-                            <li class="dropdown-item"><a href="index14.html">Grid Background 1</a></li>
-                            <li class="dropdown-item"><a href="index15.html">Grid Background 2</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                    <li class="nav-item dropdown"> <span class="nav-link"> Rooms & Suites <i
-                                class="ti-angle-down"></i></span>
-                        <ul class="dropdown-menu last">
-                            <li class="dropdown-item"><a href="rooms.html">Rooms 1</a></li>
-                            <li class="dropdown-item"><a href="rooms2.html">Rooms 2</a></li>
-                            <li class="dropdown-item"><a href="rooms3.html">Rooms 3</a></li>
-                            <li class="dropdown-item"><a href="room-details.html">Room Details</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item"><a class="nav-link" href="restaurant.html">Restaurant</a></li>
-                    <li class="nav-item"><a class="nav-link" href="spa-wellness.html">Spa</a></li>
-                    <li class="nav-item dropdown"> <span class="nav-link"> Pages <i class="ti-angle-down"></i></span>
-                        <ul class="dropdown-menu last">
-                            <li class="dropdown-item"><a href="services.html">Services</a></li>
-                            <li class="dropdown-item"><a href="facilities.html">Facilites</a></li>
-                            <li class="dropdown-item"><a href="gallery.html">Gallery</a></li>
-                            <li class="dropdown-item"><a href="team.html">Team</a></li>
-                            <li class="dropdown-item"><a href="pricing.html">Pricing</a></li>
-                            <li class="dropdown-item"><a href="careers.html">Careers</a></li>
-                            <li class="dropdown-item"><a href="faq.html">F.A.Qs</a></li>
-                            <li class="dropdown-item"><a href="404.html">404</a></li>
-                            <li class="dropdown-item"><a href="coming-soon.html">Coming Soon</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown"> <span class="nav-link active"> News <i
-                                class="ti-angle-down"></i></span>
-                        <ul class="dropdown-menu last">
-                            <li class="dropdown-item"><a href="news.html">News 1</a></li>
-                            <li class="dropdown-item active"><a href="news2.html">News 2</a></li>
-                            <li class="dropdown-item"><a href="post.html">Single Post</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+          <!-- Logo -->
+          <div class="logo-wrapper navbar-brand valign">
+            <a href="index.html">
+              <div class="logo">
+                <img src="./images/logo.png" class="logo-img" alt="" />
+              </div>
+            </a>
+          </div>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
+            aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"><i class="ti-menu"></i></span>
+          </button>
+          <!-- Navbar links -->
+          <div class="collapse navbar-collapse" id="navbar">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item dropdown">
+                <span class="nav-link active"><a href="/">Trang chủ </a></i></span>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="gioi-thieu.html">Giới thiệu</a>
+              </li>
+              <li class="nav-item dropdown">
+                <span class="nav-link">
+                  Dịch vụ <i class="ti-angle-down"></i></span>
+                <ul class="dropdown-menu last">
+                  <li class="dropdown-item">
+                    <a href="bao-ve-nha-may-xi-nghiep.html">Dịch vụ bảo vệ nhà máy xí nghiệp</a>
+                  </li>
+                  <li class="dropdown-item">
+                    <a href="bao-ve-kho-hang.html">Dịch vụ bảo vệ kho hàng</a>
+                  </li>
+                  <li class="dropdown-item">
+                    <a href="bao-ve-phong-kham-benh-vien.html">Dịch vụ bảo vệ phòng khám bệnh viện</a>
+                  </li>
+                  <li class="dropdown-item">
+                    <a href="bao-ve-shop-thoi-trang.html">Dịch vụ bảo vệ shop thời trang</a>
+                  </li>
+                  <li class="dropdown-item">
+                    <a href="bao-ve-sieu-thi-va-trung-tam-thuong-mai.html" style="overflow-wrap: break-word;">Dịch vụ bảo vệ
+                      siêu thị và trung tâm thương mại</a>
+                  </li>
+                  <li class="dropdown-item">
+                    <a href="bao-ve-ngan-hang.html" style="overflow-wrap: break-word;">Dịch vụ bảo vệ ngân hàng</a>
+                  </li>
+                  <li class="dropdown-item">
+                    <a href="bao-ve-nha-rieng-biet-thu.html" style="overflow-wrap: break-word;">Dịch vụ bảo vệ nhà riêng,
+                      biệt thự</a>
+                  </li>
+                  <li class="dropdown-item">
+                    <a href="bao-ve-cong-trinh-xay-dung.html" style="overflow-wrap: break-word;">Dịch vụ bảo vệ công trình
+                      xây dựng</a>
+                  </li>
+                  <li class="dropdown-item">
+                    <a href="bao-ve-su-kien-le-hoi.html" style="overflow-wrap: break-word;">Dịch vụ bảo vệ sự kiện lễ
+                      hội</a>
+                  </li>
+                  <li class="dropdown-item">
+                    <a href="bao-ve-ngay-tet.html" style="overflow-wrap: break-word;">Dịch vụ bảo vệ ngày tết</a>
+                  </li>
+                  <li class="dropdown-item">
+                    <a href="bao-ve-toa-nha-chung-cu.html" style="overflow-wrap: break-word;">Dịch vụ bảo vệ tòa nhà, chung
+                      cư</a>
+                  </li>
+                  <li class="dropdown-item">
+                    <a href="bao-ve-quan-cafe.html" style="overflow-wrap: break-word;">Dịch vụ bảo vệ quán cafe</a>
+                  </li>
+                  <li class="dropdown-item">
+                    <a href="bao-ve-khu-cong-nghiep.html" style="overflow-wrap: break-word;">Dịch vụ bảo vệ khu công
+                      nghiệp</a>
+                  </li>
+                  <li class="dropdown-item">
+                    <a href="bao-ve-van-phong-cong-ty.html" style="overflow-wrap: break-word;">Dịch vụ bảo vệ văn phòng công
+                      ty</a>
+                  </li>
+                  <li class="dropdown-item">
+                    <a href="bao-ve-giu-xe.html" style="overflow-wrap: break-word;">Dịch vụ bảo vệ giữ xe</a>
+                  </li>
                 </ul>
-            </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="gia-thue-bao-ve.html">Bảng giá thuê dịch vụ bảo vệ</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./images/ho-so-nang-luc/ho-so-nang-luc- TRUNG NAM.pdf">HS Năng lực</a>
+              </li>
+    
+              <li class="nav-item dropdown">
+                <span class="nav-link"><a href="tin-tuc.html">Tin tức</a></span>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="lien-he.html">Liên hệ</a>
+              </li>
+            </ul>
+          </div>
         </div>
-    </nav>
+      </nav>
     <!-- Header Banner -->
     <div class="banner-header section-padding valign bg-img bg-fixed" data-overlay-dark="4"
         data-background="img/slider/7.jpg">
