--- a/bao-ve-ngay-tet.html
+++ b/bao-ve-ngay-tet.html
@@ -306,7 +306,7 @@
                                     các dự án khác nhau. Các phương án bảo vệ mà chúng tôi đưa vào thực tiễn phát triển
                                     luôn rất linh hoạt, phù hợp với khách hàng của mình để từ đó giúp tiết kiệm chi phí
                                     mà vẫn đảm bảo đạt hiệu quả cao.
-                                    <p>Tính đến thời điểm hiện tại, bảo vệ Song Hỏa Long đã và đang là đối tác tin cậy
+                                    <p>Tính đến thời điểm hiện tại, bảo vệ Trung Nam đã và đang là đối tác tin cậy
                                         của hàng nghìn các khách hàng lớn nhỏ trên toàn quốc. Để hiểu rõ hơn về năng lực
                                         làm việc của công ty chúng tôi, mời các bạn tham khảo một số thông tin chi tiết
                                         dưới đây:</p>
