--- a/bao-ve-phong-kham-benh-vien.html
+++ b/bao-ve-phong-kham-benh-vien.html
@@ -215,7 +215,7 @@
                                     </p>
                                     <h6>Bệnh viện thường tiềm ẩn những nguy cơ mất an toàn, an ninh nào ?</h6>
                                     <p>Dựa theo kinh nghiệm nhiều năm hoạt động trong lĩnh vực cung cấp dịch vụ bảo vệ
-                                        cho bệnh viện. Song Hỏa Long nhận thấy rằng, ở trong các bệnh viện thường tiềm
+                                        cho bệnh viện. Trung Nam nhận thấy rằng, ở trong các bệnh viện thường tiềm
                                         ẩn một số nguy cơ gây mất trật tự an toàn, an ninh như: </p>
                                     <ul>
                                         <li> - Người nhà của bệnh nhân không tuân thủ theo đúng quy định mà bệnh viện đã
