--- a/bao-ve-quan-cafe.html
+++ b/bao-ve-quan-cafe.html
@@ -297,8 +297,7 @@
                                         Minh. Chúng tôi có nhiều năm kinh nghiệm trong lĩnh vực bảo vệ và đã dành trọn
                                         được niềm tin yêu của khách hàng. Hầu hết mọi khách hàng đều tin tưởng và dịch
                                         vụ và con người của công ty Trung Nam.</p>
-                                    <p>Khi lựa chọn dịch vụ bảo vệ quán cafe chuyên nghiệp của công ty bảo vệ Song Hỏa
-                                        long bạn sẽ không cần phải lo lắng về sự an toàn và tài sản của nhân viên và
+                                    <p>Khi lựa chọn dịch vụ bảo vệ quán cafe chuyên nghiệp của công ty bảo vệ Trung Nam bạn sẽ không cần phải lo lắng về sự an toàn và tài sản của nhân viên và
                                         khách hàng trong quán cafe của mình. Khi chọn dịch vụ bảo vệ, quán cafe của bạn
                                         sẽ được bảo vệ 24/24 một cách tốt nhất.</p>
                                     <p>
@@ -340,21 +339,19 @@
                                         để từ đó đưa ra được phương án bảo vệ tốt nhất.</p>
                                     <h6> Bước 3: Lên kế hoạch bảo vệ cho quán cafe
                                     </h6>
-                                    <p>Dựa trên tình hình khảo sát thực tế tại quán cafe, Song Hoả Long sẽ tiến hành hội
+                                    <p>Dựa trên tình hình khảo sát thực tế tại quán cafe, Trung Nam sẽ tiến hành hội
                                         thảo và lên kế hoạch bảo vệ tốt nhất cho quán cafe. Kế hoạch bảo vệ quán cafe sẽ
                                         được triển khai theo các nội dung như sau: mục tiêu bảo vệ là gì, Phương án bảo
                                         vệ ra sao, nguồn nhân lực, các trang thiết bị để bảo vệ, phương án xử lý các
                                         tình huống khẩn cấp.</p>
                                     <h6> Bước 4: Tuyển dụng và đào tạo nhân viên bảo vệ cho quán cafe
                                     </h6>
-                                    <p>Tuỳ thuộc vào mục tiêu và yêu cầu của các chủ quán cafe, chuỗi quán cafe, Song
-                                        Hỏa Long sẽ tiến hành tuyển dụng và đào tạo đội ngũ nhân viên bảo vệ sao cho phù
+                                    <p>Tuỳ thuộc vào mục tiêu và yêu cầu của các chủ quán cafe, chuỗi quán cafe, Trung Nam sẽ tiến hành tuyển dụng và đào tạo đội ngũ nhân viên bảo vệ sao cho phù
                                         hợp nhất. Đội ngũ nhân viên bảo vệ của chúng tôi được đào tạo một cách bài bản
                                         và chuyên nghiệp về các nghiệp vụ bảo vệ, tuyển chọn những người có sức khoẻ
                                         tốt, ngoại hình ưa nhìn, có tinh thần trách nhiệm cao, kỹ luật cao.</p>
                                     <h6> Bước 5: Tiến hành ký kết hợp đồng</h6>
-                                    <p>Sau khi đã thống nhất kế hoạch bảo vệ với chủ quán cafe, đơn vị bảo vệ Song Hỏa
-                                        Long sẽ tiến hành ký kết hợp đồng với chủ quán cafe. Trong bản hợp đồng sẽ ghi
+                                    <p>Sau khi đã thống nhất kế hoạch bảo vệ với chủ quán cafe, đơn vị bảo vệ Trung Nam sẽ tiến hành ký kết hợp đồng với chủ quán cafe. Trong bản hợp đồng sẽ ghi
                                         rõ những quy định, quyền lợi và nghĩa vụ của cả hai bên.</p>
                                     <h6>Bước 6: Triển khai dịch vụ bảo vệ quán cafe</h6>
                                     <p>Sau khi đã ký kết hợp đồng với chủ quán cafe, chúng tôi sẽ tiến hành triển khai
