--- a/bao-ve-shop-thoi-trang.html
+++ b/bao-ve-shop-thoi-trang.html
@@ -353,7 +353,7 @@
                                         chúng tôi cũng sẽ khảo sát từng khu vực và những khu vực nào cần bảo vệ đảm bảo an ninh.</p>
                                     <h6>Bước 3: Lên phương án bảo vệ cho shop thời trang
                                     </h6>
-                                    <p>Dựa trên tình hình khảo sát thực tế, công ty Song Hoả Long sẽ tiến hành xây dựng
+                                    <p>Dựa trên tình hình khảo sát thực tế, công ty Trung Nam sẽ tiến hành xây dựng
                                         phương án bảo vệ phù hợp đối với từng cửa hàng. Những phương án bảo vệ sẽ bao
                                         gồm các nội dung chính như: phân công nhiệm vụ cho từng nhân viên và quy trình
                                         xử lý các tình huống…</p>
@@ -368,7 +368,7 @@
                                         áo để nhằm mục đích hỗ trợ tốt nhất cho công tác bảo vệ. Những thiết bị an ninh
                                         thường được lắp đặt sẽ bao gồm: hệ thống báo động, camera giám sát,chuông cảnh báo…</p>
                                     <h6>Bước 6: Cung cấp dịch vụ bảo vệ cho shop thời trang</h6>
-                                    <p>Ngay sau khi đã hoàn thành các bước nêu trên, Song Hoả Long sẽ cung cấp dịch vụ
+                                    <p>Ngay sau khi đã hoàn thành các bước nêu trên, Trung Nam sẽ cung cấp dịch vụ
                                         bảo vệ cho các cửa hàng. Nhân viên của chúng tôi sẽ thực hiện các nhiệm vụ bảo
                                         vệ theo đúng như phương án đã nêu ra. </p>
                                     <h6>Bước 7: Giám sát và đánh giá</h6>
