--- a/bao-ve-su-kien-le-hoi.html
+++ b/bao-ve-su-kien-le-hoi.html
@@ -371,7 +371,7 @@
                                             trợ bảo vệ.</li>
                                     </ul>
                                     <h6>Năng lực nghiệp vụ bảo vệ sự kiện </h6>
-                                    <p>Năng lực nghiệp vụ bảo vệ sự kiện của bảo vệ Song Hỏa Long là: giám sát trong
+                                    <p>Năng lực nghiệp vụ bảo vệ sự kiện của bảo vệ Trung Nam là: giám sát trong
                                         quảng trường, kiểm soát đám đông, bảo vệ tài sản, bảo vệ người nổi tiếng và
                                         khống chế đối tượng gây rối.</p>
                                     =<h6>Năng lực xử lý tình huống khẩn cấp</h6>
@@ -380,7 +380,7 @@
                                         lượng bảo vệ mà công ty cung cấp đều được đào tạo bài bản về kỹ năng xử lý mọi
                                         tình huống khẩn cấp.</p>
                                     <h6>Bảo hiểm vật chất</h6>
-                                    <p>Nhằm đảm bảo mọi quyền lợi cho quý khách hàng, bảo vệ Song Hỏa Long đang cung cấp
+                                    <p>Nhằm đảm bảo mọi quyền lợi cho quý khách hàng, bảo vệ Trung Nam đang cung cấp
                                         nhiều gói bảo hiểm vật chất với tổng mức nhận bảo hiểm lên tới 10 tỷ đồng.</p>
                                 </div>
 
