--- a/gia-thue-bao-ve.html
+++ b/gia-thue-bao-ve.html
@@ -435,8 +435,7 @@
                                 </ul>
                                 <h6>Năng lực tuyển dụng và Đào tạo bảo vệ</h6>
                                 <ul>
-                                    <li>- <span style="color: black;font-weight: 800;">Công ty Bảo vệ Song Hoả
-                                            Long</span> liên kết nhiều trung tâm giới thiệu việc làm tại các tỉnh thành,
+                                    <li>- <span style="color: black;font-weight: 800;">Công ty Bảo vệ Trung Nam</span> liên kết nhiều trung tâm giới thiệu việc làm tại các tỉnh thành,
                                         nguồn lao động dồi dào</li>
                                     <li>- Công tác tuyển chọn và sàng lọc ứng việc kỹ càng, có hồ sơ lý lịch rõ ràng,
                                         nhân thân tốt</li>
