update img home

--- a/index.html
+++ b/index.html
@@ -274,10 +274,10 @@
           </div>
         </div>
         <div class="col col-md-3 animate-box" data-animate-effect="fadeInUp">
-          <img src="img/rooms/8.jpg" alt="" class="mt-90 mb-30" />
+          <img src="./images/trang-chu2/900X1200-pixel.jpg" alt="" class="mt-90 mb-30" />
         </div>
         <div class="col col-md-3 animate-box" data-animate-effect="fadeInUp">
-          <img src="img/rooms/2.jpg" alt="" />
+          <img src="./images/trang-chu2/900X1200-pixel-04.jpg" alt="" />
         </div>
       </div>
     </div>
@@ -480,7 +480,7 @@
   </section>
   <!-- Promo Video -->
   <section class="video-wrapper video section-padding bg-img bg-fixed" data-overlay-dark="3"
-    data-background="img/slider/2.jpg">
+    style="background-image: url(images/trang-chu2/banner-abc.jpg);">
     <div class="container">
       <div class="row">
         <div class="col-md-8 offset-md-2 text-center">
@@ -495,7 +495,7 @@
       </div>
       <div class="row">
         <div class="text-center col-md-12">
-          <a class="vid" href="https://youtu.be/7BGNAGahig8">
+          <a class="vid" href="./index.html">
             <div class="vid-butn">
               <span class="icon">
                 <i class="ti-control-play"></i>
@@ -520,7 +520,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="square-flip">
-              <div class="square bg-img" data-background="img/rooms/1.jpg">
+              <div class="square bg-img" style="background-image: url(./images/trang-chu2/toa-nha.jpg);">
                 <span class="category"><a href="noi-quy-bao-ve-toa-nha.html">Chi tiết</a></span>
                 <div class="square-container d-flex align-items-end justify-content-end">
                   <div class="box-title">
@@ -545,7 +545,7 @@
           </div>
           <div class="col-md-4">
             <div class="square-flip">
-              <div class="square bg-img" data-background="img/rooms/2.jpg">
+              <div class="square bg-img" style="background-image: url(./images/trang-chu2/chi-tiet-cong-viec.jpg);">
                 <span class="category"><a href="ban-mo-ta-chi-tiet-cong-viec.html">Chi tiết</a></span>
                 <div class="square-container d-flex align-items-end justify-content-end">
                   <div class="box-title">
@@ -569,7 +569,7 @@
           </div>
           <div class="col-md-4">
             <div class="square-flip">
-              <div class="square bg-img" data-background="img/rooms/3.jpg">
+              <div class="square bg-img" style="background-image: url(./images/trang-chu2/binh-duong.jpg);">
                 <span class="category"><a href="bao-gia-thue-dich-vu-bao-ve-tai-binh-duong.html">Chi
                     tiết</a></span>
                 <div class="square-container d-flex align-items-end justify-content-end">
@@ -594,7 +594,7 @@
           </div>
           <div class="col-md-4">
             <div class="square-flip">
-              <div class="square bg-img" data-background="img/rooms/6.jpg">
+              <div class="square bg-img" style="background-image: url(./images/trang-chu2/cong-ty-lua-dao.jpg);">
                 <span class="category"><a href="dau-hieu-nhan-biet-cong-ty-bao-ve-lua-dao.html">Chi
                     tiết</a></span>
                 <div class="square-container d-flex align-items-end justify-content-end">
@@ -622,7 +622,7 @@
           </div>
           <div class="col-md-4">
             <div class="square-flip">
-              <div class="square bg-img" data-background="img/rooms/8.jpg">
+              <div class="square bg-img" style="background-image: url(./images/trang-chu2/nha-xe.jpg);">
                 <span class="category"><a href="noi-quy-nha-xe-truong-hoc.html">Chi tiết</a></span>
                 <div class="square-container d-flex align-items-end justify-content-end">
                   <div class="box-title">
@@ -673,8 +673,8 @@
   </div>
   <!-- Testiominals -->
   <section class="testimonials">
-    <div class="background bg-img bg-fixed section-padding pb-0" data-background="img/slider/2.jpg"
-      data-overlay-dark="3">
+    <div class="background bg-img bg-fixed section-padding pb-0"
+      style="background-image: url(images/trang-chu2/banner-abc.jpg);" data-overlay-dark="3">
       <div class="container">
         <div class="row">
           <div class="col-md-8 offset-md-2">
