--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
           </div>
           <div class="col-md-4">
             <div class="square-flip">
-              <div class="square bg-img" data-background="img/rooms/9.jpg">
+              <div class="square bg-img" style="background-image: url(./images/trang-chu2/quy-trinh-xu-ly.jpg);">
                 <span class="category"><a href="quy-trinh-xu-ly-su-co-toa-nha.html">Chi tiết</a></span>
                 <div class="square-container d-flex align-items-end justify-content-end">
                   <div class="box-title">
