--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
   <header class="header slider-fade">
     <div class="owl-carousel owl-theme">
       <!-- The opacity on the image is made with "data-overlay-dark="number". You can change it using the numbers 0-9. -->
-      <div class="text-center item bg-img" data-overlay-dark="2" data-background="images/trang-chu/1920x1200-pixel.jpg">
+      <div class="text-center item bg-img" data-overlay-dark="2" data-background="images/banner/banner-01.jpg">
         <div class="v-middle caption">
           <div class="container">
             <div class="row">
@@ -183,7 +183,7 @@
           </div>
         </div>
       </div>
-      <div class="text-center item bg-img" data-overlay-dark="2" data-background="images/banner/banner.jpg">
+      <div class="text-center item bg-img" data-overlay-dark="2" data-background="images/banner/banner-02.jpg">
         <div class="v-middle caption">
           <div class="container">
             <div class="row">
@@ -206,7 +206,7 @@
         </div>
       </div>
       <div class="text-center item bg-img" data-overlay-dark="3"
-        data-background="images/trang-chu/1920x1200-01pixel.jpg">
+        data-background="images/banner/banner-03.jpg">
         <div class="v-middle caption">
           <div class="container">
             <div class="row">
