update gioi thieu

--- a/gioi-thieu.html
+++ b/gioi-thieu.html
@@ -176,7 +176,7 @@
                         <i class="star-rating"></i>
                     </span>
                     <div class="section-subtitle">Về Chúng Tôi</div>
-                    <div class="section-title" style="font-weight: 800;">CÔNG TY BẢO VỆ TRUNG NAM</div>
+                    <div class="section-title" style="font-weight: 800;">CÔNG TY CỔ PHẦN DỊCH VỤ BẢO VỆ CHUYÊN NGHIỆP TRUNG NAM</div>
                     <p>Công Ty Bảo Vệ Trung Nam xin gửi đến Quý Khách Hàng một lời chúc tốt đẹp nhất ! </p>
                     <p>Thưa Quý khách hàng, Công ty chúng tôi hoạt động chủ yếu trong lĩnh vực cung cấp Dịch vụ Bảo Vệ –
                         Vệ Sĩ chuyên nghiệp.</p>
