u[date gioi thieu v1

--- a/gioi-thieu.html
+++ b/gioi-thieu.html
@@ -153,7 +153,7 @@
       </nav>
     <!-- Header Banner -->
     <div class="banner-header section-padding valign bg-img bg-fixed" data-overlay-dark="4"
-        data-background="img/slider/1.jpg">
+        style="background-image: url(./images/gioi-thieu/banner.jpg);">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 caption mt-90">
@@ -196,9 +196,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col col-md-3 animate-box" data-animate-effect="fadeInUp"> <img src="img/rooms/8.jpg" alt=""
+                <div class="col col-md-3 animate-box" data-animate-effect="fadeInUp"> <img src="./images/gioi-thieu/ve-chung-toi-1.jpg" alt=""
                         class="mt-90 mb-30"> </div>
-                <div class="col col-md-3 animate-box" data-animate-effect="fadeInUp"> <img src="img/rooms/2.jpg" alt="">
+                <div class="col col-md-3 animate-box" data-animate-effect="fadeInUp"> <img src="./images/gioi-thieu/ve-chung-toi-2.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -223,9 +223,9 @@
                 <div class="col-md-6">
                     <div class="" style="width: 70%;">
                         <div class="pricing-card">
-                            <img src="img/pricing/1.jpg" alt="">
+                            <img src="./images/gioi-thieu/cam-ket.jpg" alt="">
                             <div class="desc">
-                                <div class="name" style="font-weight: 800;">CÔNG TY BẢO VỆ TRUNG NAM</div>
+                                <div class="name" style="font-weight: 800;line-height: 35px;">CÔNG TY CỔ PHẦN DỊCH VỤ BẢO VỆ CHUYÊN NGHIỆP TRUNG NAM</div>
 
                                 <ul class="list-unstyled list" style="display: grid;grid-template-columns: 1fr 1fr;">
                                     <li><i class="ti-check"></i> UY TÍN</li>
@@ -314,7 +314,7 @@
             <div class="row">
                 <div class="col-md-12 owl-carousel owl-theme">
                     <div class="item">
-                        <div class="img"> <img src="img/team/4.jpg" alt=""> </div>
+                        <div class="img"> <img src="./images/gioi-thieu/nha may-600x600-pixel.jpg" alt=""> </div>
                         <div class="info">
                             <h6>Dịch vụ Bảo vệ Nhà máy xí nghiệp</h6>
 
@@ -322,7 +322,7 @@
                     </div>
                     <div class="item">
                         <div class="img">
-                            <img src="img/team/1.jpg" alt="">
+                            <img src="./images/gioi-thieu/kho xuong-600x600-pixel.jpg" alt="">
                         </div>
                         <div class="info">
                             <h6>Dịch vụ bảo vệ Kho xưởng</h6>
@@ -330,7 +330,7 @@
                         </div>
                     </div>
                     <div class="item">
-                        <div class="img"> <img src="img/team/2.jpg" alt=""> </div>
+                        <div class="img"> <img src="./images/gioi-thieu/toa nha-600x600-pixel.jpg" alt=""> </div>
                         <div class="info">
                             <h6>Dịch vụ Bảo vệ Tòa nhà văn phòng</h6>
 
