--- a/gioi-thieu.html
+++ b/gioi-thieu.html
@@ -387,7 +387,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col col-md-3 animate-box" data-animate-effect="fadeInUp"> <img src="img/rooms/8.jpg" alt=""
+                <div class="col col-md-3 animate-box" data-animate-effect="fadeInUp"> <img src="./images/gioi-thieu/ve-chung-toi-1.jpg" alt=""
                         class="mt-90 mb-30"> </div>
                 <!-- <div class="col col-md-3 animate-box" data-animate-effect="fadeInUp"> <img src="img/rooms/2.jpg" alt=""> -->
             </div>
