--- a/gioi-thieu.html
+++ b/gioi-thieu.html
@@ -367,7 +367,7 @@
             <div class="row">
                 <div class="col-md-6 mb-30 animate-box" data-animate-effect="fadeInUp">
                     <span>
-                        <i class="star-rating"></i>
+                        <i class="star-rating"></i>0
                         <i class="star-rating"></i>
                         <i class="star-rating"></i>
                         <i class="star-rating"></i>
