--- a/gioi-thieu.html
+++ b/gioi-thieu.html
@@ -337,21 +337,21 @@
                         </div>
                     </div>
                     <div class="item">
-                        <div class="img"> <img src="img/team/5.jpg" alt=""> </div>
+                        <div class="img"> <img src="./images/gioi-thieu/chung cu-600x600-pixel.jpg" alt=""> </div>
                         <div class="info">
                             <h6>Dịch vụ Bảo vệ Chung cư</h6>
 
                         </div>
                     </div>
                     <div class="item">
-                        <div class="img"> <img src="img/team/3.jpg" alt=""> </div>
+                        <div class="img"> <img src="./images/gioi-thieu/cong trinh-600x600-pixel.jpg" alt=""> </div>
                         <div class="info">
                             <h6>Dịch vụ bảo vệ công trình</h6>
 
                         </div>
                     </div>
                     <div class="item">
-                        <div class="img"> <img src="img/team/6.jpg" alt=""> </div>
+                        <div class="img"> <img src="./images/gioi-thieu/truong hoc-600x600-pixel.jpg" alt=""> </div>
                         <div class="info">
                             <h6>Dịch vụ Bảo vệ Trường học</h6>
 
