update gioi thieu

--- a/index.html
+++ b/index.html
@@ -205,8 +205,7 @@
           </div>
         </div>
       </div>
-      <div class="text-center item bg-img" data-overlay-dark="3"
-        data-background="images/banner/banner-03.jpg">
+      <div class="text-center item bg-img" data-overlay-dark="3" data-background="images/banner/banner-03.jpg">
         <div class="v-middle caption">
           <div class="container">
             <div class="row">
